updating my details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Welcome to my page! Thanks for stopping by. I hope you all are staying positive and testing negative! #Corona2020</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from North Carolina, born and raised. I grew up just outside of Concord, NC.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to play games (mostly board, some video), rock climb (indoors and out), nap (indoors and out), and do anything else that involves friends and food. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is somewhere in the realm of technology and would involve positive teamwork while maximizing efficiency to maintain a healthy work/life balance. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in the Trangle in North Carolina; more specifically, I live in Durham.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I had some exposure to technology development in my last job and I always found it interesting to work with developers and learn more about how technology programs are made. I think it would be awesome to get a job where I can build things myself or with a team. </p>
     </section>
 
     <footer id="footer">
